# reconhecimento-facial

./: pyproject.toml
reconhecimento/: cadastro.py  ddetector.py  presenca.py
