[tool.poetry]
name = "reconhecimento-facial"
version = "0.1.0"
description = ""
authors = ["Lucas Sousa Silva <lucassousasilva@yahoo.com>"]
readme = "README.md"
packages = [{include = "reconhecimento_facial"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"
dlib = "^19.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
